HYDRA-619: Configure hydra-jetty to support running two instances of Fedora
Updates README.txt to include arguments to prevent PermGen errors 
and also noting the new service endpoints for fedora and solr.

https://jira.duraspace.org/browse/HYDRA-619